# nestdaq

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md
cmake/: CMakeLists.txt  build_redis-stack_with_temp_rust.sh  patch_redisearch.cmake  patch_redisjson.cmake  redis-stack.cmake
controller/: CMakeLists.txt  DaqWebControlDefaultDocRootPath.h.in  HttpWebSocketServer.cxx  HttpWebSocketServer.h  WebGui.cxx  WebGui.h  WebSocketHandle.h  beast_tools.cxx  beast_tools.h  http_session.cxx  http_session.h  listener.cxx  listener.h  run_daq-webctl.cxx  websocket_session.cxx  websocket_session.h
examples/: CMakeLists.txt  NullDevice.cxx  NullDevice.h  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h
plugins/: CMakeLists.txt  Constants.h  DaqRunLogger.h  DaqServicePlugin.cxx  DaqServicePlugin.h  Functions.h  LoggingFileSink.h  MetricsPlugin.cxx  MetricsPlugin.h  ParameterConfigPlugin.cxx  ParameterConfigPlugin.h  TelemetryPlugin.cxx  TelemetryPlugin.h  TimeUtil.cxx  TimeUtil.h  Timer.cxx  Timer.h  TopologyConfig.cxx  TopologyConfig.h  TopologyData.h  tools.cxx  tools.h
scripts/: CMakeLists.txt  README.md  mq-param.sh  start_device.sh.in  topology-1-1.sh  topology-2samplers-n-m.sh  topology-n-n-m.sh
share/controller/: CMakeLists.txt  README.md  daq-webctl.html  daq-webctl_orig.html
